--- a/pom.xml
+++ b/pom.xml
@@ -25,16 +25,37 @@
     </plugins>
   </build>
   <dependencies>
-  	  <dependency>
-  	  	<groupId>activity.gm99.com</groupId>
-  	  	<artifactId>activity.gm99.com</artifactId>
-  	  	<version>0.0.1-SNAPSHOT</version>
-  	  </dependency>
 	  <dependency>
 	    <groupId>dom4j</groupId>
 	    <artifactId>dom4j</artifactId>
 	    <version>1.6.1</version>
 	  </dependency>
+	  <dependency>
+		<groupId>log4j</groupId>
+		<artifactId>log4j</artifactId>
+		<version>1.2.16</version>
+	  </dependency>
+	  <dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpcore</artifactId>
+			<version>4.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.2.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi</artifactId>
+			<version>3.10-FINAL</version>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
   </dependencies>
   
 </project>
